[package]
name = "retrieve-state"
version = "0.1.0"
authors = ["Daniel Werner <dan@casperlabs.io>"]
edition = "2018"

[dependencies]
anyhow = "1"
casper-contract = { git = "http://github.com/casper-network/casper-node", default-features = false, rev = "eb7e303" }
casper-execution-engine = { git = "http://github.com/casper-network/casper-node",  rev = "eb7e303" }
casper-hashing = { git = "http://github.com/casper-network/casper-node",  rev = "eb7e303" }
casper-node = { git = "http://github.com/casper-network/casper-node",  rev = "eb7e303" }
casper-types = { git = "http://github.com/casper-network/casper-node",  rev = "eb7e303" }
env_logger = "0.9"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
hex = "0.4.3"
jsonrpc-lite = "0.5.0"
lmdb = "0.8.0"
num-rational = { version = "0.4.0", features = ["serde"] }
reqwest = { version = "0.11.1", features = ["json", "gzip"] }
serde = "1"
serde_json = "1"
structopt = "0.3.22"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
thiserror = "1.0.29"
walkdir = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.2.0"
